# WEBULL

./: .env  .gitignore  .pre-commit-config.yaml  README.md  acces_token.py  access.py  finbiz.py  get_market_data_token.py  pyproject.toml  pytest.ini  screen_config.yaml  setup_structure.ps1  symbols.txt  symbols_clean2.txt  symbols_nyse.txt  symbols_nyse_small.txt  symbols_small.txt  test1.py  test2.py  us_equities.csv  us_equities.py  webull
.github/workflows/: ci.yml  cl.yml
configs/: config.yaml
gap_bot/: filters.py
gap_bot/utils/: config.py  logger.py  notify.py
logs/: unit_test.csv
scripts/: health_monitor.py  retrain_ml.py  run_close.py  run_daily.py  run_entry.py  run_live.py  run_monthly_opt.py  run_screen.py  weekly_report.py
sdk/: alpaca_ws.py  quotes_alpaca.py  quotes_polygon.py  webull_sdk_wrapper.py
tests/: conftest.py  test_entry_calc.py  test_filters.py  test_logger.py  test_quote_provider.py  test_trailing_sl.py
